--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">TeamProject</string>
+    <string name="autofillhints">autofillHints</string>
+    <string name="name">Name</string>
+    <string name="textview">TextView</string>
 </resources>
